--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vscode-snippet-generator",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Generate a snippet extensions for vscode",
   "scripts": {
     "build": "bash ./build.sh",
+    "build:test": "bash ./build.sh -t",
     "lint": "tslint -p tsconfig.json -c tslint.json 'src/**/*.ts'",
     "test": "npm run mocha --recursive ./test/**/*.spec.ts",
     "mocha": "mocha -r ts-node/register",
