--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vscode-snippet-generator",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Generate a snippet extensions for vscode",
+  "main": "./src/index",
   "scripts": {
     "build": "bash ./build.sh",
     "build:test": "bash ./build.sh -t",
