--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,29 +4,36 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   // ${relativeFile}
   "version": "0.2.0",
-  "configurations": [{
-    "name": "Launch Extension",
-    "type": "extensionHost",
-    "request": "launch",
-    "runtimeExecutable": "${execPath}",
-    "args": ["--extensionDevelopmentPath=${workspaceRoot}"]
-  }, {
-    "type": "node",
-    "request": "launch",
-    "name": "Test",
-    "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-    "args": ["-r", "ts-node/register", "test/parse.spec.ts"],
-    "cwd": "${workspaceRoot}",
-    "protocol": "inspector",
-    "internalConsoleOptions": "openOnSessionStart"
-  }, {
-    "type": "node",
-    "request": "launch",
-    "name": "Ts",
-    "args": ["src/index.ts"],
-    "runtimeArgs": ["-r", "ts-node/register"],
-    "cwd": "${workspaceRoot}",
-    "protocol": "inspector",
-    "internalConsoleOptions": "openOnSessionStart"
-  }]
+  "configurations": [
+    {
+      "name": "Launch Extension",
+      "type": "extensionHost",
+      "request": "launch",
+      "runtimeExecutable": "${execPath}",
+      "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
+      "stopOnEntry": false,
+      "sourceMaps": true,
+      "outFiles": ["${workspaceFolder}/dist/src/vscode-extension/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Test",
+      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+      "args": ["-r", "ts-node/register", "test/parse.spec.ts"],
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Ts",
+      "args": ["src/index.ts"],
+      "runtimeArgs": ["-r", "ts-node/register"],
+      "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
+      "internalConsoleOptions": "openOnSessionStart"
+    }
+  ]
 }
