--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,14 @@
   "version": "2.0.0",
   "command": "npm",
   "type": "shell",
-  "tasks": [{
+  "tasks": [
+    {
+      "label": "run",
+      "args": ["build"],
+      "isBackground": false,
+      "promptOnClose": false
+    },
+    {
       "label": "build",
       "args": ["run", "build"]
     },
