--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,23 +5,13 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "declaration": true,
+    "lib": ["es2017", "dom"],
+    "typeRoots": ["node_modules/@types"],
     "removeComments": true,
     "strict": true,
     "esModuleInterop": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules/**/*",
-    "dist/**/*",
-    "test/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/**/*", "dist/**/*", "test/**/*"]
 }
